--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -309,7 +309,26 @@ Eight individuals were recruited for this study through various channels, includ
 
                                           <h2>Overview of Methodology</h2>
 
-                    Each brainstorming session consisted of lunch (15 minutes), study overview (15 minutes), brainstorming (45 minutes), and discussion (15 minutes). Lunch was served at the start of the session. Participants were welcomed to continue eating during the study overview, during which the study facilitators presented a slide deck which detailed the study goals, provided an ice breaker, defined fundamental concepts, and established a schedule for the day. During brainstorming time, participants broke into two groups, during which they were instructed to generate ideas with the following in mind: Quantity over quality, No idea is a bad idea, Creative and wild ideas are encouraged, Jot down everything, Avoid criticizing or praising ideas, Avoid lengthy discussion, and Use many tools to express your ideas. Participants were provided with a wide array of stationary during all sessions, including markers, mini whiteboards and dry erase markers, pens, paper pads, sticky notes, index cards, and stickers. During discussion, each group would present their ideas and the whole team would reflect and discuss commonalities and the research team would ask questions to gain clarity. We organized the sessions to scaffold the particpants’s thought processes by first asking them to assess the feasibility of personalized lessons to teach cybersecurity in high school, having participants generate specific lesson plan ideas according to their previously established assessment of feasibility, and then voting on the most promising ideas. We video and audio recorded each session, using two video cameras to focus on each group. Each session, we also photographed design artifacts and collected notes.
+<p>Each brainstorming session consisted of:</p>
+<ul>
+  <li>Lunch (15 minutes)</li>
+  <li>Study overview (15 minutes)</li>
+  <li>Brainstorming (45 minutes)</li>
+  <li>Discussion (15 minutes)</li>
+</ul>
+<p>Lunch was served at the start of the session. Participants were welcomed to continue eating during the study overview, during which the study facilitators presented a slide deck which detailed the study goals, provided an ice breaker, defined fundamental concepts, and established a schedule for the day.</p>
+<p>During brainstorming time, participants broke into two groups, during which they were instructed to generate ideas with the following in mind:</p>
+<ul>
+  <li>Quantity over quality</li>
+  <li>No idea is a bad idea</li>
+  <li>Creative and wild ideas are encouraged</li>
+  <li>Jot down everything</li>
+  <li>Avoid criticizing or praising ideas</li>
+  <li>Avoid lengthy discussion</li>
+  <li>Use many tools to express your ideas</li>
+</ul>
+<p>Participants were provided with a wide array of stationary during all sessions, including markers, mini whiteboards and dry erase markers, pens, paper pads, sticky notes, index cards, and stickers. During discussion, each group would present their ideas and the whole team would reflect and discuss commonalities and the research team would ask questions to gain clarity.</p>
+<p>We organized the sessions to scaffold the participants’ thought processes by first asking them to assess the feasibility of personalized lessons to teach cybersecurity in high school, having participants generate specific lesson plan ideas according to their previously established assessment of feasibility, and then voting on the most promising ideas. We video and audio recorded each session, using two video cameras to focus on each group. Each session, we also photographed design artifacts and collected notes.</p>
 
 
                      <h2>Outcomes: Brainstorming Session 1</h2>
