--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -21,8 +21,8 @@
          table, th, td {
   border: 1px solid black;
   border-radius: 10px;
-               font-size: 10px;
-            cellpadding:"10";
+               font-size: 12px;
+            padding: 10px;
                      text-align: center;
 }
       </style>
