--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -210,8 +210,22 @@ University of South Florida </p>
            
                      
                      <h2>Participant Recruitment and Demographics</h2>
-
-Eight individuals were recruited for this study through various channels, including email invitations, USF social media platforms, paper flyers distributed across campus and within on-campus residence halls, campus-wide email distributions, and recruitment videos. Additionally, study flyers were shared with our established collaborators for dissemination to potential participants and were made available in the university student center. Invited participants reported enrollment in the Computer Science and Engineering program, with two individuals also enrolled in Medical Engineering, all of whom are affiliated with the University of South Florida's College of Engineering. Each participant received a $75 e-gift card per brainstorming session and a $50 e-gift card for completing the final focus group. This study was approved by USF's Institutional Review Board as Study #005606, and was funded by NSF's Secure and Trustworthy Cyberspace Program, Grant #2039373.
+<p>Eight individuals were recruited for this study through various channels, including:</p>
+<ul>
+  <li>Email invitations</li>
+  <li>USF social media platforms</li>
+  <li>Paper flyers distributed across campus and within on-campus residence halls</li>
+  <li>Campus-wide email distributions</li>
+  <li>Recruitment videos</li>
+</ul>
+<p>Additionally, study flyers were shared with our established collaborators for dissemination to potential participants and were made available in the university student center. Invited participants reported enrollment in the Computer Science and Engineering program, with two individuals also enrolled in Medical Engineering, all of whom are affiliated with the University of South Florida's College of Engineering.</p>
+<p>Each participant received:</p>
+<ul>
+  <li>A $75 e-gift card per brainstorming session</li>
+  <li>A $50 e-gift card for completing the final focus group</li>
+</ul>
+<p>This study was approved by USF's Institutional Review Board as Study #005606, and was funded by NSF's Secure and Trustworthy Cyberspace Program, Grant #2039373.</p>
+<p>Each participant also completed a <a href="https://www.pewresearch.org/internet/quiz/cybersecurity-knowledge/" target="_blank">Cybersecurity Knowledge Quiz</a> prior to participating in the study to assess their overall cybersecurity awareness. This was important to ensure each participant could effectively participate in discussion during the study.</p>
 
                   </br></br>
 
