--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -210,7 +210,7 @@ University of South Florida </p>
            
                      
                      <h2>Participant Recruitment and Demographics</h2>
-<p>Eight individuals were recruited for this study through various channels, including:</p>
+<p>Ten undergraduate students were recruited for this study through various channels, including:</p>
 <ul>
   <li>Email invitations</li>
   <li>USF social media platforms</li>
@@ -218,7 +218,7 @@ University of South Florida </p>
   <li>Campus-wide email distributions</li>
   <li>Recruitment videos</li>
 </ul>
-<p>Additionally, study flyers were shared with our established collaborators for dissemination to potential participants and were made available in the university student center. Invited participants reported enrollment in the Computer Science and Engineering program, with two individuals also enrolled in Medical Engineering, all of whom are affiliated with the University of South Florida's College of Engineering.</p>
+<p>Additionally, study flyers were shared with our established collaborators for dissemination to potential participants and were made available in the university student center. Eight participants reported enrollment in the Computer Science and Engineering program, with two individuals also enrolled in Medical Engineering, all of whom are affiliated with the University of South Florida's College of Engineering.</p>
 <p>Each participant received:</p>
 <ul>
   <li>A $75 e-gift card per brainstorming session</li>
