--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -346,17 +346,17 @@ University of South Florida </p>
 
 
                      <h2>Outcomes: Brainstorming Session 1</h2>
-                     <h3>Powerpoint Slides</h3>
+                     <h3><a href="Session1.pdf" target="_blank">Session Slides</a></h3>
                      <h3>Key Discussion Points</h3>
                      <h3>Findings</h3>
 
                      <h2>Outcomes: Brainstorming Session 2</h2>
-                     <h3>Powerpoint Slides</h3>
+                     <h3><a href="Session2.pdf" target="_blank">Session Slides</a></h3>
                      <h3>Key Discussion Points</h3>
                      <h3>Findings</h3>
 
                      <h2>Outcomes: Final Focus Group</h2>
-                     <h3>Powerpoint Slides</h3>
+                     <h3><a href="Session3.pdf" target="_blank">Session Slides</a></h3>
                      <h3>Key Discussion Points</h3>
                      <h3>Findings</h3>
 
