--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -346,6 +346,7 @@ University of South Florida </p>
 
 
                      <h2>Outcomes: Brainstorming Session 1</h2>
+                     <p>The objective of the first brainstorming session was to pinpoint threat modeling scenarios tailored specifically to high school students, aiming to facilitate effective cybersecurity education. The session underscored the importance of making content relatable to teenagers, hypothesizing that crafting narratives and scenarios would enhance engagement and comprehension. The team emphasized the value of using real-world threats to enhance memorability and relevance. Central to this endeavor was the identification of scenarios pertinent to Identity and Access Management (IAM) and user authentication, vital concepts in cybersecurity education. The session's refined goal was to assess the usefulness of personalized threat scenarios for teaching IAM, with questions probing the benefits of personalization, its impact on learning, and student responses. The ultimate aim was to establish the efficacy of this approach in the session and strategize its implementation for scenario identification in subsequent sessions.</p>
                      <h3><a href="Session1.pdf" target="_blank">Session Slides</a></h3>
                      <h3>Key Discussion Points</h3>
                      <h3>Findings</h3>
