--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -338,7 +338,37 @@
                      <p>The objective of the first brainstorming session was to pinpoint threat modeling scenarios tailored specifically to high school students, aiming to facilitate effective cybersecurity education. The session underscored the importance of making content relatable to teenagers, hypothesizing that crafting narratives and scenarios would enhance engagement and comprehension. The team emphasized the value of using real-world threats to enhance memorability and relevance. Central to this endeavor was the identification of scenarios pertinent to Identity and Access Management (IAM) and user authentication, vital concepts in cybersecurity education. The session's refined goal was to assess the usefulness of personalized threat scenarios for teaching IAM, with questions probing the benefits of personalization, its impact on learning, and student responses. The ultimate aim was to establish the efficacy of this approach in the session and strategize its implementation for scenario identification in subsequent sessions.</p>
                      <h3><a href="Session1.pdf" target="_blank">Session Slides</a></h3>
                      <h3>Key Discussion Points</h3>
+
+    <div id="question1">
+        <h2>Question 1: Why would personalizing threat scenarios be useful?</h2>
+        <ul>
+            <li>It forces the individual to be in the scenario, think about how to do better next time</li>
+            <li>Teaches them to be more careful</li>
+            <li>Personalizing threat scenarios would be useful to make audiences feel more connected with the message</li>
+            <li>Useful because it can allow ourselves to be relatable to the audience</li>
+            <li>People would relate to their own personal experiences</li>
+            <li>Easier to spread information if people care about what they are listening to</li>
+            <li>People may know friends or family members that have had similar experiences</li>
+            <li>Audiences can better understand the risks and severity as they see how it applies in their own lives</li>
+            <li>Facing for the first time is tough. If they experience it before it would be better to face the situation.</li>
+            <li>It would make the concept or threat scenarios easier to understand.</li>
+            <li>Good foundation to learn</li>
+            <li>Makes the information simpler, making it easier for non-experts to understand</li>
+            <li>Open public servers, risk assessment, or even data breaches leading to information</li>
+            <li>Do not share personal things</li>
+        </ul>
+    </div>
+
+    <div id="summary">
+        <h5>Summary</h5>
+        <p>Personalizing threat scenarios is crucial for several reasons. It compels individuals to immerse themselves in the scenario, encouraging reflection and improvement for future encounters. Additionally, personalized scenarios foster a sense of caution and connection by relating directly to the audience's experiences. This approach facilitates easier dissemination of information, enhances understanding of risks, and provides a solid foundation for learning cybersecurity concepts, particularly for non-experts. By utilizing real-world examples and avoiding the sharing of personal information, personalized threat scenarios become more relatable, engaging, and impactful in educating individuals about cybersecurity.</p>
+    </div>
+
+                     
                      <h3>Findings</h3>
+
+
+                     
                      <h2>Outcomes: Brainstorming Session 2</h2>
                      <h3><a href="Session2.pdf" target="_blank">Session Slides</a></h3>
                      <h3>Key Discussion Points</h3>
