--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -341,6 +341,7 @@
 
     <div id="question1">
         <h2>Question 1: Why would personalizing threat scenarios be useful?</h2>
+       <h3>Group A:</h3>
         <ul>
             <li>It forces the individual to be in the scenario, think about how to do better next time</li>
             <li>Teaches them to be more careful</li>
@@ -363,6 +364,28 @@
         <h5>Summary</h5>
         <p>Personalizing threat scenarios is crucial for several reasons. It compels individuals to immerse themselves in the scenario, encouraging reflection and improvement for future encounters. Additionally, personalized scenarios foster a sense of caution and connection by relating directly to the audience's experiences. This approach facilitates easier dissemination of information, enhances understanding of risks, and provides a solid foundation for learning cybersecurity concepts, particularly for non-experts. By utilizing real-world examples and avoiding the sharing of personal information, personalized threat scenarios become more relatable, engaging, and impactful in educating individuals about cybersecurity.</p>
     </div>
+
+                            <h3>Group B:</h3>
+
+                      <ul>
+        <li>It would inform students about the threat to their personal information</li>
+        <li>Increased engagement rate</li>
+        <li>So they are aware that they can pursue it as a career</li>
+        <li>Could probably lead to someone creating a cybersecurity software which minimizes the risk of data being stolen</li>
+        <li>Easily available</li>
+        <li>Promote learning of cybersecurity</li>
+        <li>Social awareness</li>
+        <li>Involve more students cybersecurity</li>
+        <li>Enhanced training</li>
+        <li>To help student not be scared of hackers</li>
+        <li>Informing authorities</li>
+        <li>Know about potential threat cyberattacks can pose to them</li>
+        <li>To encourage students to be aware and afraid</li>
+        <li>Not sharing information across platforms</li>
+        <li>So student are aware it could happen to them</li>
+        <li>Know about different types of cyberattacks</li>
+        <li>So they know the severity of cyberattacks</li>
+    </ul>
 
                      
                      <h3>Findings</h3>
