--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -367,6 +367,8 @@
 
                             <h3>Group B:</h3>
 
+                     These key points highlight the various benefits of personalizing threat scenarios, underscoring its importance in cybersecurity education. By informing students about the potential threats to their personal information and raising awareness of cybersecurity issues, personalized scenarios can significantly increase engagement and promote a deeper understanding of the subject. Moreover, they can inspire students to consider cybersecurity as a career path and encourage them to develop solutions to mitigate risks, such as creating cybersecurity software. Additionally, personalized scenarios foster social awareness, enhance training, and empower students to take proactive measures against cyber threats, ultimately contributing to a safer online environment.
+
                       <ul>
         <li>It would inform students about the threat to their personal information</li>
         <li>Increased engagement rate</li>
