--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -409,9 +409,82 @@
                      <h2>Outcomes: Final Focus Group</h2>
                      <h3><a href="Session3.pdf" target="_blank">Session Slides</a></h3>
                      <h3>Key Discussion Points</h3>
-                     <h3>Findings</h3>
-                     <h2>Overall Study Findings</h2>
-                     <h3>Ways to Incorporate Findings into High School Cybersecurity Courses</h3>
+                     <h3>Findings: Final Games Selected and Detailed by the Study Participants</h3>
+
+  
+  <h4>Monopoly Adaptation</h4>
+  <ul>
+    <li>The goal is to make the longest/strongest password.</li>
+    <li>Instead of money, players gain characters for their passwords.
+      <ul>
+        <li>This also means that they might have to give away characters if they land on spaces that they don’t own.</li>
+      </ul>
+    </li>
+    <li>Chance cards can be adapted to possible threat scenarios.
+      <ul>
+        <li>E.g., “getting hacked” means you go to jail, “someone logged into your account” means that you must reset your password (losing all of your characters), etc.</li>
+      </ul>
+    </li>
+    <li>Railroads can be major tech companies.</li>
+    <li>Free Parking means that you’re taking a break and scrolling on social media.</li>
+    <li>Passing “Go” lets you collect 2 characters (instead of $200).</li>
+    <li>The winner would be the person who has the longest password (most characters).</li>
+  </ul>
+
+  <h4>Escape Room</h4>
+  <ul>
+    <li>Students get one card each. The card they get has a list of questions that other students may answer for them, and a list of questions that they could possibly answer for other students.</li>
+    <li>The questions would be varied between cards in such a way that not every student will have the same questions. The questions themselves will be based on content learned over the year.</li>
+    <li>Once the student’s card is completed, they can successfully escape.</li>
+  </ul>
+
+  <h4>Kahoot Game</h4>
+  <ul>
+    <li>Using Kahoot to test students’ knowledge.</li>
+    <li>The questions will show 2 similar images, and students must determine which one is a possible threat/phishing.
+      <ul>
+        <li>E.g., a friend sending you an email vs. someone trying to get you to click a link.</li>
+      </ul>
+    </li>
+    <li>This activity can be done individually or as a group effort.</li>
+  </ul>
+
+<h4>Red Team / Blue Team Simulation</h4>
+  <ul>
+    <li>This concept focuses more on scenario-based activities:
+      <ul>
+        <li>They could play a game where they are trying to protect a country (real or fake) while in wartime, where they have to figure out which strategies are best for protecting them in the digital landscape.
+          <ul>
+            <li>To make this more interesting, you could also have an attacking team that is deciding on a plan to take advantage of any potential vulnerabilities that the defending country leaves open.</li>
+          </ul>
+        </li>
+        <li>An alternative escape room could be having to find parts of a password and combining those pieces to form a complete password to make your escape.
+          <ul>
+            <li>In this situation, the clues would be user authentication questions, and the answers would reveal the location of the password part.</li>
+          </ul>
+        </li>
+        <li>A Wordle-style game where instead of guessing a word, you have to guess a user’s password.</li>
+        <li>A speed-dating matching game, where you have to use the clues you figure out about people to figure out the target’s potential password.
+          <ul>
+            <li>The student/group that gets the closest wins.</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+
+  <h4>Real-Life Scenario Simulator</h4>
+  <ul>
+    <li>Similar to training videos/simulation activities, where given a situation, you must decide what course of action to take. The decisions made affect the results of the simulation.</li>
+    <li>The scenario itself would be based on ways you can protect yourself and your data.</li>
+  </ul>
+
+  <h4>Bruteforce a Password</h4>
+  <ul>
+    <li>This would require coding a Python script to help students break into a fake social media account. This would teach students about password lists.</li>
+    <li>An extension of this would be having multiple fake accounts (with different passwords), so that each student/group can work on one account and show their completion by changing the hacked account’s name to be their name(s) when finished.</li>
+  </ul>
+                     
                   </div>
                </div>
             </div>
