--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -5,76 +5,26 @@
       <meta charset="utf-8"/>
       <title>Tempestt Neal, Ph.D.</title>
       <style>
-/* Add your CSS styling here */
-         body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
-            margin: 0;
-            padding: 0;
+         /* Add your CSS styling here */
+         .member {
+         display: inline-block;
+         width: 200px;
+         margin: 20px;
+         text-align: center;
          }
-         .container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 20px;
+         .member img {
+         width: 150px;
+         height: 150px;
+         border-radius: 50%;
+         object-fit: cover;
+         margin-bottom: 10px;
          }
-         .navbar-default {
-            background-color: #fff;
-            border: none;
-            border-bottom: 2px solid #ddd;
-            border-radius: 0;
-            margin-bottom: 20px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-         }
-         .navbar-default .navbar-nav > li > a {
-            color: #333;
-         }
-         .navbar-default .navbar-nav > li > a:hover,
-         .navbar-default .navbar-nav > li > a:focus {
-            color: #555;
-         }
-         .navbar-brand img {
-            width: 200px;
-         }
-         section {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-         }
-         h2 {
-            color: #333;
-         }
-         h3 {
-            color: #555;
-         }
-         p {
-            line-height: 1.6;
-         }
-         table {
-            width: 100%;
-            border-collapse: collapse;
-         }
-         th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-         }
-         th {
-            background-color: #f2f2f2;
-         }
-         footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-         }
-         footer small {
-            color: #ccc;
+         table, th, td {
+         border: 1px solid black;
+         border-radius: 10px;
+         font-size: 12px;
+         padding: 10px;
+         text-align: center;
          }
       </style>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
