--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -5,66 +5,28 @@
       <meta charset="utf-8"/>
       <title>Tempestt Neal, Ph.D.</title>
       <style>
-/* Add your CSS styling here */
-
-/* Adjustments for headers and subheaders */
-h1, h2, h3, h4, h5, h6 {
-  color: #333; /* Adjust the color as needed */
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-h1 {
-  font-size: 28px; /* Increase font size for main headers */
-}
-
-h2 {
-  font-size: 24px; /* Increase font size for subheaders */
-}
-
-h3 {
-  font-size: 20px; /* Increase font size for sub-subheaders */
-}
-
-/* Borders for headers */
-hr.star-primary {
-  border-color: #337ab7; /* Adjust the border color */
-  margin-top: 20px;
-}
-
-/* Background color for headers */
-section {
-  background-color: #f9f9f9; /* Adjust the background color */
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 10px;
-}
-
-/* Additional styling for headers and sections */
-.container {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-/* Adjustments for the footer */
-footer {
-  background-color: #333; /* Adjust the background color */
-  color: #fff; /* Adjust the text color */
-  padding: 20px 0;
-}
-
-/* Adjustments for links */
-a {
-  color: #337ab7; /* Adjust link color */
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline; /* Underline links on hover */
-}
-
-</style>
-
+         /* Add your CSS styling here */
+         .member {
+         display: inline-block;
+         width: 200px;
+         margin: 20px;
+         text-align: center;
+         }
+         .member img {
+         width: 150px;
+         height: 150px;
+         border-radius: 50%;
+         object-fit: cover;
+         margin-bottom: 10px;
+         }
+         table, th, td {
+         border: 1px solid black;
+         border-radius: 10px;
+         font-size: 12px;
+         padding: 10px;
+         text-align: center;
+         }
+      </style>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <!-- Font Awesome Icons -->
       <link rel="stylesheet" href="css/font-awesome.min.css"/>
