--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -31,7 +31,9 @@
     justify-content: space-between;
   }
   .image-container img {
-    max-width: 45%; /* Adjust the width as needed */
+    max-width: 45%; /* Adjust the width as needed */    
+     max-height: 5%; /* Adjust the width as needed */
+
   }
       </style>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
