--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -31,8 +31,7 @@
     justify-content: space-between;
   }
   .image-container img {
-    max-width: 45%; /* Adjust the width as needed */    
-     max-height: 5%; /* Adjust the width as needed */
+    width: 45%; /* Adjust the width as needed */    
 
   }
       </style>
