--- a/2039373_REU.html
+++ b/2039373_REU.html
@@ -34,6 +34,13 @@
     width: 45%; /* Adjust the width as needed */    
 
   }
+         .tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-baqh{text-align:center;vertical-align:top}
+.tg .tg-amwm{font-weight:bold;text-align:center;vertical-align:top}
       </style>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <!-- Font Awesome Icons -->
@@ -443,6 +450,76 @@
                      <h3><a href="Session2.pdf" target="_blank">Session Slides</a></h3>
                      <h3>Key Discussion Points</h3>
                      <h3>Findings</h3>
+                     <table class="tg">
+<thead>
+  <tr>
+    <th class="tg-baqh"></th>
+    <th class="tg-amwm" colspan="2">Why would personalizing threat scenarios be useful?</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-baqh"></td>
+    <td class="tg-amwm">Group A</td>
+    <td class="tg-amwm">Group B</td>
+  </tr>
+  <tr>
+    <td class="tg-amwm">Highest Rated</td>
+    <td class="tg-baqh">Makes the information simpler, making it easier for non-experts to understand</td>
+    <td class="tg-baqh">Easily available</td>
+  </tr>
+  <tr>
+    <td class="tg-amwm"></td>
+    <td class="tg-baqh">It would make the concept or threat scenarios easier t understand.</td>
+    <td class="tg-baqh">Not sharing information across platforms</td>
+  </tr>
+  <tr>
+    <td class="tg-baqh"></td>
+    <td class="tg-baqh">Audiences can better understand the risks and severity as they see how it applies in their own lives</td>
+    <td class="tg-baqh">Increased engagement rate</td>
+  </tr>
+  <tr>
+    <td class="tg-baqh"></td>
+    <td class="tg-baqh">Useful because it can allow ourselves to be relatable to the audience</td>
+    <td class="tg-baqh">It would inform students about the threat to their personal information</td>
+  </tr>
+  <tr>
+    <td class="tg-baqh"></td>
+    <td class="tg-baqh">It forces the individual to be in the scenario, think about how to do better next time</td>
+    <td class="tg-baqh">So they know the severity of cyberattacks</td>
+  </tr>
+  <tr>
+    <td class="tg-baqh"></td>
+    <td class="tg-baqh">Personalizing threat scenarios would be useful to make audiences feel more connected with the message</td>
+    <td class="tg-baqh">So students are aware it could happen to them</td>
+  </tr>
+  <tr>
+    <td class="tg-baqh"></td>
+    <td class="tg-baqh">Easier to spread information if people care about what they are listening to</td>
+    <td class="tg-baqh">Social awareness</td>
+  </tr>
+  <tr>
+    <td class="tg-baqh"></td>
+    <td class="tg-baqh">Facing for the first time is tough. If they experience it before it would be better to face the situation.</td>
+    <td class="tg-baqh">Involve more students cybersecurity</td>
+  </tr>
+  <tr>
+    <td class="tg-baqh"></td>
+    <td class="tg-baqh">Teaches them to be more careful</td>
+    <td class="tg-baqh">To encourage students to be aware and afraid</td>
+  </tr>
+  <tr>
+    <td class="tg-baqh"></td>
+    <td class="tg-baqh">People would relate to their own experiences</td>
+    <td class="tg-baqh">Know about potential threat cyberattacks can pose to them</td>
+  </tr>
+  <tr>
+    <td class="tg-amwm">Lowest Rated</td>
+    <td class="tg-baqh">Open public servers, risk assessment, or even data breaches leading to information</td>
+    <td class="tg-baqh">Know about different types of cyberattacks</td>
+  </tr>
+</tbody>
+</table>
                      <h2>Outcomes: Final Focus Group</h2>
                      <h3><a href="Session3.pdf" target="_blank">Session Slides</a></h3>
                      <h3>Key Discussion Points</h3>
